upgraded kotlin to 1.3.61

--- a/commoncode/build.gradle
+++ b/commoncode/build.gradle
@@ -20,7 +20,7 @@ kotlin {
         fromPreset(iOSTarget, 'ios') {
             binaries {
                 framework('CommonCode'){
-                    freeCompilerArgs.add("-Xobjc-generics")
+                    freeCompilerArgs += "-Xno-objc-generics"
                 }
             }
         }
