--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ buildscript {
 }
 
 plugins {
-    // Find latest version at https://plugins.gradle.org/plugin/jmfayard.github.io.gradle-kotlin-dsl-libs
-    id("jmfayard.github.io.gradle-kotlin-dsl-libs") version "0.2.6" // $ ./gradlew syncLibs
+    id("de.fayard.buildSrcVersions") version "0.7.0" // ./gradlew buildSrcVersions
+    id("org.jetbrains.kotlin.native.cocoapods") version "$kotlin_version"
 }
 
 allprojects {
