--- a/commoncode/build.gradle
+++ b/commoncode/build.gradle
@@ -1,13 +1,18 @@
+
 // TODO apply the plugin
 apply plugin: 'kotlin-multiplatform'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlinx-serialization'
+apply plugin: 'kotlin-native-cocoapods'
 
 ext{
     ktor = "1.3.1"
     coroutines = "1.3.5"
     serialization = "0.13.0"
 }
+
+// CocoaPods requires the podspec to have a version.
+version = "1.0"
 
 // TODO create the kotlin DSL
 kotlin {
@@ -97,6 +102,16 @@ kotlin {
                 implementation "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
             }
         }
+    }
+
+    cocoapods {
+        // Configure fields required by CocoaPods.
+        summary = "Some description for a Kotlin/Native module"
+        homepage = "Link to a Kotlin/Native module homepage"
+
+        // The name of the produced framework can be changed.
+        // The name of the Gradle project is used here by default.
+//        frameworkName = "my_framework"
     }
 }
 
